# postgres

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  diesel.toml  rustfmt.toml
.github/: dependabot.yaml
.github/actions/migrate-and-generate/: action.yaml
.github/actions/wait-for-postgres/: action.yaml  script.sh
.github/workflows/: build.yaml  docker.yaml
crates/client/: Cargo.toml  README.md  lib.rs
crates/client/config/: custom_hooks.rs  mod.rs  pool_configs.rs
crates/client/migrate/: custom_hooks.rs  mod.rs
crates/client/query/: account_permissions.rs  account_sessions.rs  account_tokens.rs  accounts.rs  mod.rs  project_invites.rs  project_members.rs  project_schedules.rs  project_webhooks.rs  projects.rs
crates/client/utils/: dsl.rs  mod.rs  serde.rs
crates/schema/: Cargo.toml  README.md  build.rs  lib.rs
crates/schema/types/: constraints.rs  enumerations.rs  mod.rs
migrations/2025-03-05-060617_initial/: down.sql  up.sql
migrations/2025-03-05-060647_accounts/: up.sql
migrations/2025-03-05-062551_projects/: down.sql  up.sql
scripts/: 001_custom_config.sh  002_setup_query.sql
