# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-db-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = "Database client and queries for the Axiston application."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
axiston-db-schema = { workspace = true }

diesel = { workspace = true }
diesel_migrations = { workspace = true }
diesel-async = { workspace = true }

tokio = { workspace = true }
deadpool = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ipnet = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
